--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v12.0&appId=208829950390233&autoLogAppEvents=1" nonce="WMmTZadR"></script>
 
     <div id="Buscar">
         <p>Ingresa el nombre del Pokemon: </p>
@@ -38,6 +40,8 @@
 
     <div id="Mostrar">
     </div>
+    
+    <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false"></div>
 
      <script src="./Procedimiento3.js"></script>
 
